--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                                 <br>
                                                 <br>
                                                 <br>
-                                                Obs.: O sistema é meramente demostrativo, muita partes são somente demostrativas (ex.: envio de email).
+                                                Obs.: O sistema é meramente demostrativo, muitas partes são somente demostrativas (ex.: envio de email).
                                             </div>
                                             <div class="modal-footer">
                                               <button type="button" class="btn btn-secondary" data-dismiss="modal" >Responder Depois</button>
