--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                             <h2 id="sub-text2" class="text-spacing">Nossos fins justificam nossa ousadia e nossos princípios justificam nossos meios.</h2>
 
-                            <h3 id="sub-text3" class="text-spacing">Faça parte de uma rede de conexão líderes comprometidos com os desafios sociais e que atuem como agentes multiplicadores para um Brasil melhor e mais justo</h3>                       
+                            <h3 id="sub-text3" class="text-spacing">Faça parte de uma rede de conexão de líderes comprometidos com os desafios sociais e que atuem como agentes multiplicadores para um Brasil melhor e mais justo</h3>                       
                         </div>
 
                         <div class="arrow-down-information" >
